# nyaser-maps-downloader

./: HISTORY.md  README.md  lib-copy.js  minify-options.js  minify.js  package-lock.json  package.json  version-builder.js  version-sync.js  version.js
.github/workflows/: release.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/asset/html/: middleware-loader.html  middleware.html
src-tauri/asset/html/frontend/: file_manager.html
src-tauri/capabilities/: default.json
src-tauri/html/: middleware-loader.html  middleware.html
src-tauri/html/frontend/: file_manager.html
src-tauri/src/: aria2c.rs  commands.rs  config_manager.rs  dialog_manager.rs  dir_manager.rs  download_manager.rs  extract_manager.rs  helper.rs  init.rs  lib.rs  log_utils.rs  main.rs  queue_manager.rs  symlink_manager.rs  utils.rs
src/filemanager/: main.css  main.html  main.js
src/html/: middleware.html
src/html/frontend/: file_manager.html
src/js/: server-list-button.js
src/plugin/: entry.js  main.css  main.html  main.js  sw.js
src/serverlist/: list.json  main.css  main.html  main.js
