[package]
name = "nyaser-maps-downloader"
version = "1.5.0"
description = "A Tauri App for downloading L4D2 maps (Windows only)"
authors = ["Nyaser"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nyaser_maps_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.51.0"
regex = "1.10.3"
tauri-plugin-dialog = "2"
tokio = { version = "1.47.1", features = ["time", "signal"] }
chrono = "0.4.42"
winapi = { version = "0.3.9", features = ["fileapi", "winbase", "libloaderapi", "shellapi"] }
