[package]
name = "nyaser-maps-downloader"
version = "2.2.2"
description = "A Tauri App for downloading L4D2 maps (Windows only)"
authors = ["Nyaser"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nyaser_maps_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.51.0"
tauri-plugin-dialog = "2"
tokio = { version = "1.47.1", features = ["time", "signal"] }
chrono = "0.4.42"
winapi = { version = "0.3.9", features = ["fileapi", "winbase", "libloaderapi", "shellapi", "consoleapi", "processthreadsapi"] }
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_System_LibraryLoader", "Win32_Foundation"] }
urlencoding = "2.1.3"
regex = "1.12.2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
